--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,54 @@
-annoy==1.16.0
-ConfigArgParse==0.14.0
-fasttext==0.8.2
-numpy==1.16.4
-PyYAML==5.1.1
-spacy==2.1.8
-thinc==7.3.1
-tensorflow==1.15.0
+absl-py==0.9.0
+annoy==1.16.3
+astor==0.8.1
+backports.weakref==1.0.post1
+blis==0.4.1
+catalogue==1.0.0
+certifi==2019.11.28
+chardet==3.0.4
+configargparse==0.14.0
+cymem==2.0.3
+cython==0.29.14
+https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.2.5/en_core_web_md-2.2.5.tar.gz
+enum34==1.1.6
+fasttext==0.8.4
+future==0.18.2
+gast==0.3.3
+google-pasta==0.1.8
+grpcio==1.26.0
+h5py==2.10.0
+idna==2.8
+importlib-metadata==1.4.0; python_version < "3.8"
+keras-applications==1.0.8
+keras-preprocessing==1.1.0
+markdown==3.1.1
+mock==3.0.5
+more-itertools==8.1.0; python_version < "3.8"
+murmurhash==1.0.2
+numpy==1.16.6
+pillow==7.0.0
+plac==1.1.3
+preshed==3.0.2
+protobuf==3.11.2
+pyyaml==5.1.2
+requests==2.22.0
+six==1.14.0
+spacy==2.2.3
+srsly==1.0.1
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
 tensorflow-hub==0.4.0
+termcolor==1.1.0
+thinc==7.3.1
 torch==1.2.0
 torchtext==0.4.0
 torchvision==0.3.0
-tqdm==4.30.0
-wmd==1.3.1
-https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.1.0/en_core_web_md-2.1.0.tar.gz
+tqdm==4.41.1
+urllib3==1.25.7
+wasabi==0.6.0
+werkzeug==0.16.0
+wheel==0.33.6
+wmd==1.3.2
+wrapt==1.11.2
+zipp==2.0.0; python_version < "3.8"
